WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213977
[Cocoa] REGRESSION (
r263914
): Non-Apple-Pay Cocoa builds failing
https://bugs.webkit.org/show_bug.cgi?id=213977
Summary
[Cocoa] REGRESSION (r263914): Non-Apple-Pay Cocoa builds failing
Darin Adler
Reported
2020-07-05 16:07:10 PDT
[Cocoa] REGRESSION (
r263914
): Non-Apple-Pay Cocoa builds failing
Attachments
Patch
(1.21 KB, patch)
2020-07-05 16:07 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2020-07-05 16:07:46 PDT
Created
attachment 403564
[details]
Patch
Darin Adler
Comment 2
2020-07-05 16:11:02 PDT
Committed
r263957
: <
https://trac.webkit.org/changeset/263957
>
Radar WebKit Bug Importer
Comment 3
2020-07-05 16:12:14 PDT
<
rdar://problem/65112167
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug