[Cocoa] REGRESSION (r263914): Non-Apple-Pay Cocoa builds failing https://bugs.webkit.org/show_bug.cgi?id=213977

* Modules/applepay/cocoa/PaymentMethodCocoa.mm: Fixed messed up #endif and
unnecessary #undef at end of file.

Canonical link: https://commits.webkit.org/226779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263957 268f45cc-cd09-0410-ab3c-d52691b4dbfc